--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
       <div class="cards"></div>
     </div>
     <!-- TODO: add Axios CDN here (Or install Axios with npm instead!) -->
+    <script>"https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"</script>
     <script src="./GitHubCard/index.js"></script>
   </body>
 </html>
 <!-- Do NOT change anything here except TODO line -->
+
+
